[package]
name = "cloudflare_systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "3"
actix-files = "0.5.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
